- Removed USE_LONGMODE, if it was #undef'ed problems could occur, so there is no reason to
  have it if it doesn't to anything.
- Fixed a bug where leaving out a value for certain config directives would cause a crash,
  reported by AngryWolf (#0000596)
- Fixed whole bunch of users in empty channel bug (probably)
- Added a patch by Syzop to increase the "randomness" of well... the random numbers
- Fixed a bug in the empty channel fix
- Fixed a bug in the random patch under win32
- Added a suggestion by AngryWolf to generate an error if a link::password-connect
  is specified as encrypted. (#0000597)
- Fixed bug #0000601 reported by cate where specifying just a :port number for set::scan::endpoint 
  caused a seg fault.
- Added some patches by Syzop to fix a variety of different bugs
- Added some bugfixes for IPv6 and others by Syzop
- Fixed a bug where leaving out the parameter to a password config entry would cause a
  crash, reported by AngryWolf (#0000623)
- Adding throttling, read config.h for more info. For the uneducated,
  throttling is to reconnect way too fast repeatedly. Thanks to [Real] for
  the idea
- Fixed bug #000613 reported by AngryWolf where we were writing a null to the log file when 
  we reached max size.
- Fixed a bug where helpop would pass on a null pointer
- One more fix to the above
- Patch by Syzop to fix a bug in the resolver
- Preperations for beta14. Will be a recommended upgrade
- Compile fixes regarding throttling
- Fix when you use another make than make
- Fixed so crypt() works on !HAVE_CRYPT systems with openssl 0.9.7+ too
  (yes, this makes us able to compile win32-ssl)
** beta14 released **
- Fixed example.conf set::dns::retries, 2s -> 2
- Updated help.conf: added access level required for channel modes, added chanmode +G, etc.
- Fix for missing mode 'S' in 005 CHANMODES= message
- Added message if '/helpop' is used without parameters by helpops.
- Fixed compile error in makefile.win32.ssl (added src/random.c).