@@ -1788,3 +1788,4 @@ seen. gmtime warning still there
 - Fix for missing mode 'S' in 005 CHANMODES= message
 - Added message if '/helpop' is used without parameters by helpops.
 - Fixed compile error in makefile.win32.ssl (added src/random.c).
+- Fixed compile error in src/random.c at win32.
